--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+      <title>Winter Run</title>
       <style>
-          body {
-              padding: 0;
-              margin: 0;
-              background-color: 0;
+          canvas {
+              width: 25%;
           }
       </style>
     <script src="/libs/phaser.js"></script>
-    <script src="game.js"></script>
+    <script defer src="/js/game.js"></script>
   </head>
   <body>
   </body>
