--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Winter Run</title>
       <style>
           canvas {
-              width: 25%;
+              width: 25%
           }
       </style>
     <script src="/libs/phaser.js"></script>
