--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
           }
       </style>
     <script src="/libs/phaser.js"></script>
+    <script src="/libs/phaser.min.js"></script>
     <script defer src="/js/game.js"></script>
   </head>
   <body>
+      
+    <h1> Phaser 3 Framework- edited with Brackets.IO</h1>
   </body>
 </html> 
